[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tiktools"
version = "0.3.0"
description = "A Python toolkit for TikTok data extraction and analysis using TikAPI"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["tiktok", "tikapi", "data-extraction", "transcription", "social-media", "analysis"]
authors = [
  { name = "Matt Stiles", email = "stiles.matt@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet",
  "Topic :: Multimedia :: Video",
]
dependencies = [
  "tikapi>=1.0.0",
  "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "black>=22.0",
  "mypy>=0.990",
  "ruff>=0.1.0",
  "build>=1.0.0",
  "twine>=6.0.0",
]
translation = [
  "boto3>=1.26.0",
]
examples = [
  "openai>=1.0.0",
]

[project.urls]
Documentation = "https://github.com/stiles/tiktools#readme"
Issues = "https://github.com/stiles/tiktools/issues"
Source = "https://github.com/stiles/tiktools"

[tool.hatch.build.targets.wheel]
packages = ["tiktools"]

[tool.black]
target-version = ["py38"]
line-length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.ruff]
target-version = "py38"
line-length = 100
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4",  # flake8-comprehensions
]
ignore = [
  "E501",  # line too long, handled by black
  "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

